tests/lean/invalidPatternIssue.lean.expected.out
invalidPatternIssue.lean:13:0-13:20: error: Invalid pattern(s): `x` is an explicit pattern variable, but it only occurs in positions that are inaccessible to pattern matching:
  { pred := .(x.1).succ }
